actualización se mejoro la lectura colorUp y colorDw

--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,9 @@
 #Tue Apr 12 08:46:23 CDT 2016
-dimensionX=680
-posicionY=220
-posicionX=28
+posicionX=38
+posicionY=350
+dimensionX=755
+dimensionY=668
 database=localhost
-dimensionY=550
+colorUp=100
+colorDw=0
+
