--- a/config.properties
+++ b/config.properties
@@ -1,9 +1,11 @@
 #Tue Apr 12 08:46:23 CDT 2016
+modelo=SSF
 database=localhost
-posicionX=33
-posicionY=290
-dimensionX=475
-dimensionY=440
+posicionX=38
+posicionY=1550
+dimensionX=760
+dimensionY=668
 longBTR=80
-longLF=62
-timeSend=1000
+longLF=512
+longPPI=80
+timeSend=2000
