--- a/config.properties
+++ b/config.properties
@@ -1,11 +1,15 @@
 #Tue Apr 12 08:46:23 CDT 2016
-modelo=SSF
+modelo=SSPV
 database=localhost
 posicionX=38
-posicionY=1550
+posicionY=350
 dimensionX=760
-dimensionY=668
+dimensionY=695
 longBTR=80
 longLF=512
 longPPI=80
-timeSend=2000
+timeSend=1000
+dirSSPV=192.168.1.10
+portBTR=30000
+portLF=20000
+portPPI=30000
