Se agrego la marcación para el SSPF y ya se imcomporó su JAR al SSF

--- a/config.properties
+++ b/config.properties
@@ -1,11 +1,11 @@
 #Tue Apr 12 08:46:23 CDT 2016
-modelo=SSPV
+modelo=SSF
 database=localhost
 posicionX=38
 posicionY=350
 dimensionX=760
 dimensionY=695
-longBTR=80
+longBTR=28
 longLF=512
 longPPI=80
 timeSend=1000
